src/syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_ident.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Ident(
                Ident(x),
            ),
        ) @ 0..1,
    ],
} @ 0..1
