src/syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_infix.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Infix {
                op: Add @ 2..3,
                lhs: Ident(
                    Ident(x),
                ) @ 0..1,
                rhs: Infix {
                    op: Mul @ 6..7,
                    lhs: Ident(
                        Ident(y),
                    ) @ 4..5,
                    rhs: Ident(
                        Ident(z),
                    ) @ 8..9,
                } @ 4..9,
            },
        ) @ 0..9,
    ],
} @ 0..9
