src/syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_num.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Lit(
                Num(
                    Ratio {
                        numer: 1,
                        denom: 1,
                    },
                ),
            ),
        ) @ 0..1,
    ],
} @ 0..1
