src/syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_paren.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Infix {
                op: Mul @ 8..9,
                lhs: Infix {
                    op: Add @ 3..4,
                    lhs: Ident(
                        Ident(x),
                    ) @ 1..2,
                    rhs: Ident(
                        Ident(y),
                    ) @ 5..6,
                } @ 0..7,
                rhs: Ident(
                    Ident(z),
                ) @ 10..11,
            },
        ) @ 0..11,
    ],
} @ 0..11
