src/syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_prefix.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Prefix {
                op: Neg @ 0..1,
                expr: Ident(
                    Ident(x),
                ) @ 1..2,
            },
        ) @ 0..2,
    ],
} @ 0..2
